# metaprograming

./: .gitignore  bicho.py  main.py  pyproject.toml
lex/: behaviors.py  fons_lex.py  interfaces.py  utils.py
resultados/: tmph6f1t0_j.html
